style.css
body{
    background-size: cover;
    background-image: url("Images/pixelBackground.png");
    background-repeat: no-repeat;
}
@font-face{
    font-family: 'Pixel';
    src: url('./Images/font/Minecraft.ttf')
}

h1{
    font-family: Pixel;
}



#top-name {
    margin-top: 70px;
    text-shadow: 2px 2px 0px lightgrey;
    font-size: 60px;
    text-align: center;
    
}
#specialBox {
    
    padding: 20px;
    width: 250px;
    height: 200px;
    margin-bottom: 40px;
    
    
}
ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    background-color: black;
    overflow: hidden;/* Enable scrolling if too much info */
    position: fixed;/*Won't move when scroll*/
    top: 0;
    width: 100%;
    opacity: 0.75;
    
}

li a {
    display: block;
    color: white;            
    padding: 10px 15px;
    text-align: center;
}


/*header bar */

.header-bar{
    display: block;
    left: 0;
    width: 100vw;
    background-color: black;
    opacity: 50%;
    padding: 1% 0 1% 4%;
    position: fixed;
    top: 0;
    z-index: 1;
}

.header-bar a{
    padding: 0 2% 0.65% 2%;
    margin-right: 3%;
    color: white;
    text-decoration: none;
}

.header-bar a:hover{
    border-bottom: 5px solid blue;
}

.active{
    border-bottom: 5px solid red;
}



/*Projects*/
.projects {
    /*backgound*/
    position: relative;
    opacity: 90%;
    left: 4%;
    width: 92%;
    padding: 1% 0 5% 1%;

    border-radius: 25px;
    background: white;
    align-content: center;
}
.projects h1{
    text-align: center;
    font-family: pixel;
    font-size: 20;
}
.projects h2{
    font-family: pixel;
    font-size: 15;
}

a li::marker{
    text-decoration: none;
    color: #212529;
    cursor: none;
}

.projects li{
    font-family: pixel;
    font-size: 13;
    line-height: 90%;
}
/*Image bar*/

.images{
    padding-left: 4%;
}

div.img {
    margin: 10px;
    border: 1px solid lightgrey;
    float: left;
    width: 180px;
}

div.img img {
    width: 100%;
    height: 175px;
}

div.img:hover {
    border: 1px solid #777;
    transform: scale(1.2);
}

div.desc {
    padding: 15px;
    text-align: center;
    background-color: lightgray;
    opacity: 75%;
}

/* mobile responsive */
@media screen and (max-width: 600px){
    .images{
        display: flex;
        flex-direction: column;
        margin: auto;
        align-items: center;
    }

    .img{
        min-width: 250px;
    }

    .header-bar{
        position: relative;
        height: 5%;
        padding: 1% 0 3% 4%;
    }

    .header-bar a{
        margin-left: 5%;
    }

    /* only show important links on mobile */
    #top-link,#project-link,#image-link{
        display: none;
    }
}

